force-app/main/default/objects/Exam_Voucher__c/Exam_Voucher__c.object-meta.xml
<CustomObject>
    <label>Exam Voucher</label>
    <nameField>
        <displayFormat>VC-{000000}</displayFormat>
        <label>Exam Voucher ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>