force-app/main/default/objects/Exam_Voucher__c/fields/Credential_Exam_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Credential_Exam_Attempt__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Credential Exam Attempt</label>
    <referenceTo>Credential_Exam_Attempt__c</referenceTo>
    <relationshipLabel>Exam Vouchers</relationshipLabel>
    <relationshipName>Exam_Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>