force-app/main/default/objects/Exam_Voucher__c/fields/Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>Credential_Type__c</fullName>
    <label>Credential Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credential_Type</valueSetName>
    </valueSet>
</CustomField>