force-app/main/default/objects/Exam_Voucher__c/fields/Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>Exam_Status__c</fullName>
    <formula>TEXT(Credential_Exam_Attempt__r.Status__c)</formula>
    <label>Exam Status</label>
    <type>Text</type>
</CustomField>