force-app/main/default/objects/Exam_Voucher__c/fields/Permitted_Countries__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Countries__c</fullName>
    <label>Permitted Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>