force-app/main/default/objects/Exam_Voucher__c/fields/Permitted_Regions__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Regions__c</fullName>
    <description>Voucher may only be used in permitted regions to comply with local taxation laws</description>
    <label>Permitted Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>