force-app/main/default/objects/Exam_Voucher__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>