force-app/main/default/objects/Exam_Voucher__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher Code</fullName>
            </value>
            <value>
                <fullName>Virtual Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>