force-app/main/default/objects/Exam_Voucher__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>Credential_Exam_Attempt__r.User_Credential__r.User__r.FirstName + &quot; &quot; +  Credential_Exam_Attempt__r.User_Credential__r.User__r.LastName</formula>
    <label>User</label>
    <type>Text</type>
</CustomField>