force-app/main/default/objects/Exam_Voucher__c/fields/Voucher_Code__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Voucher Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>