force-app/main/default/objects/Exam_Voucher__c/fields/Voucher_Code_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code_Encrypted__c</fullName>
    <label>Voucher Code Encrypted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>