force-app/main/default/objects/Exam_Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voucher_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Sponsor__c</columns>
    <columns>Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Exam_Status__c</columns>
    <columns>User__c</columns>
    <columns>Credential__c</columns>
    <columns>Credential_Exam_Attempt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>